--- a/backend/package.json
+++ b/backend/package.json
@@ -23,10 +23,12 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
+    "react-toastify": "^10.0.5",
     "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
