--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-multi-date-picker": "^4.5.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.8.0",
