--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.11",
     "apexcharts": "^3.41.0",
+    "date-fns": "^3.6.0",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
     "jsvectormap": "^1.5.3",
